--- a/urlshare/loginsys/templates/login.html
+++ b/urlshare/loginsys/templates/login.html
@@ -1,13 +1,7 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
- <head>
-  <title>Image Uploader</title>
-     <link rel="stylesheet" type="text/css" href="{% static "css/foundation.css" %}">
- </head>
- <body>
-{% block login %}
- <div class=".large-offset-3 .large-6 .columns">
+{% extends 'index.html' %}
+
+{% block content %}
+     <div>
      <form action="/auth/login/" method="POST">
           {% csrf_token %}
          <label for="username">Имя пользователя</label>
@@ -21,7 +15,7 @@
          <div class=".link"><a href="/auth/register/">Регистрация</a></div>
          </form>
      </div>
-{% endblock %}
 
+{% endblock %}
  </body>
 </html>
