changed query for ssid_objects

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -69,12 +69,15 @@
 }
 </script>
 -->
+ {% autoescape off %}
+ssidlist1={{ all_up_ssids }}
+{% endautoescape %}
 
 <script language="JavaScript">
-    {% autoescape off %}
-ssidlist={{ all_up_ssids }}
-        {% endautoescape %}
 
+ {% autoescape off %}
+ssidlist={{ all_up_ssids }}
+{% endautoescape %}
 //console.log(up_new)
 //console.log(down_new)
 //console.log("SSID LIST= "+ssidlist)
@@ -103,8 +106,8 @@ ip=[]
 
 
     }
-  set= new Set(ip)
-  console.log("New Down: "+down_new+" New Up: "+up_new+'IP LIST= '+set);
+  //set= new Set(ip)
+  console.log("New Down: "+down_new+" New Up: "+up_new);
   }
 
 
