--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -131,8 +131,8 @@ function run() {
             $("#loading").css('display','none');
             $("input[value='ssid']" ).attr('disabled', false);
             $("#Run").css('display','inline-block') ;
-            $("#success").css('display','inline-block');
-            $("#success").fadeIn('slow').animate({opacity: 1.0}, 1500).effect("pulsate", { times: 2 }, 800).fadeOut('slow');
+            //$("#success").css('display','inline-block');
+             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
               //  $("#success").css('display','inline-block');
 
         },
