added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -134,7 +134,8 @@ function run() {
             $("input[value='ssid']" ).attr('disabled', false);
 
             //$("#success").css('display','inline-block');
-             $("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
+             $("#Run").attr('value','Success').fadeIn("slow").delay( 800 ).fadeOut("slow");
+                //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
                 $("#Run").fadeIn("slow")
               //  $("#success").css('display','inline-block');
 
