--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -136,7 +136,7 @@ function run() {
             //$("#success").css('display','inline-block');
              $("#Run").attr('value','Success').fadeIn("slow").delay( 800 ).fadeOut("slow");
                 //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
-                $("#Run").fadeIn("slow")
+                $("#Run").attr('value','Run').fadeIn("slow")
               //  $("#success").css('display','inline-block');
 
         },
