added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -134,9 +134,8 @@ function run() {
             $("input[name='ssid']" ).attr('disabled', false);
 
             //$("#success").css('display','inline-block');
-             $("#Run").attr('value','Success').fadeIn("slow").delay( 800 ).fadeOut("slow");
+             $("#Run").attr('value','Success').fadeIn("slow").delay( 800 ).fadeOut("slow").attr('value','Run');
                 //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
-                $("#Run").attr('value','Run').fadeIn("slow");
               //  $("#success").css('display','inline-block');
                 console.log("success");
 
