--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -132,9 +132,9 @@ function run() {
              // another sanity check
             $("#loading").css('display','none');
             $("input[name='ssid']" ).attr('disabled', false);
-
+             $('span.'+ssid.id).css({color:'black',opacity: 1});
             //$("#success").css('display','inline-block');
-             $("#Run").attr('value','Success').fadeIn("slow").delay( 800 ).fadeOut("slow").fadeIn("slow").attr('value','Run');
+             $("#Run").attr('value','Success');//.fadeIn("slow").delay( 800 ).fadeOut("slow").fadeIn("slow").attr('value','Run');
                 //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
               //  $("#success").css('display','inline-block');
                 console.log("success");
