--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -134,7 +134,7 @@ function run() {
             $("input[name='ssid']" ).attr('disabled', false);
              $('span').css({color:'black',opacity: 1});
             //$("#success").css('display','inline-block');
-             $("#Run").attr('value','Success');//.fadeIn("slow").delay( 800 ).fadeOut("slow").fadeIn("slow").attr('value','Run');
+             $("#Run").attr('value','Success').fadeIn("slow");//.fadeIn("slow").delay( 800 ).fadeOut("slow").fadeIn("slow").attr('value','Run');
                 //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
               //  $("#success").css('display','inline-block');
                 console.log("success");
