added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -135,7 +135,7 @@ function run() {
              $('span').css({color:'black',opacity: 1});
             //$("#success").css('display','inline-block');
              $("#Run").css('color','green').attr('value','Success').fadeIn("slow").delay( 800 ).fadeOut("slow");//.fadeIn("slow").delay( 800 ).fadeOut("slow").fadeIn("slow").attr('value','Run');
-             $("#Run").css('color','red').attr('value','Run');fadeIn("slow");
+             $("#Run").css('color','red').attr('value','Run').fadeIn("slow");
                 //$("#success").fadeIn("slow").delay( 800 ).fadeOut("slow");
               //  $("#success").css('display','inline-block');
                 console.log("success");
