added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -74,9 +74,9 @@
 
 <script language="JavaScript">
 
-$("input[name='ssid']" ).hover(function() {
+$("span" ).hover(function() {
   $( this ).fadeOut( 100 );
-  $( this ).fadeIn( 500 );
+  $( this ).fadeIn( 100 );
 });
 
 {% autoescape off %}
