--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -77,16 +77,16 @@
 $(document).ready(function(){
 
 $('#Run').mouseenter(function(){
-        $('#Run').fadeTo('fast', 1);
+        $(this).fadeTo('fast', 1);
     });
 $('#Run').mouseleave(function(){
-        $('#Run').fadeTo('fast', 0.5);
+        $(this).fadeTo('fast', 0.5);
     });
  $('span').mouseenter(function(){
-        $('span').fadeTo('fast', 0.5);
+        $(this).fadeTo('fast', 0.5);
    });
 $('span').mouseleave(function(){
-        $('span').fadeTo('fast', 1);
+        $(this).fadeTo('fast', 1);
     })});
 
 {% autoescape off %}
