added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -146,6 +146,7 @@ function run() {
 
               //  $("#success").css('display','inline-block');
                 console.log("success");
+                console.log(ssidlist);
 
         },
 
