added jquery features

--- a/ssidswitcher1/ssid/templates/index.html
+++ b/ssidswitcher1/ssid/templates/index.html
@@ -103,7 +103,8 @@ ip=[]
         else {
             index = down_new.indexOf(String(ssid.id));
             down_new.splice(index, 1);
-            $('span.'+ssid.id).append( "<strong style='color:red'>  <--Already ENABLED</strong>" );
+            //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already ENABLED</strong>" );
+            $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
             console.log(ssid.id+' already UP')}
 }
      else {
@@ -113,8 +114,10 @@ ip=[]
         else {
             index = up_new.indexOf(ssid.id);
             up_new.splice(index,1)
-            $('span.'+ssid.id).append( "<strong style='color:red'>  <--Already Disabled</strong>" );
+            //$('span.'+ssid.id).append( "<strong style='color:red'>  <--Already Disabled</strong>" );
+            $('span.'+ssid.id).css({color:'black',opacity: 0.2}).animate({opacity: 1}, 700 );
             console.log(ssid.id+ " already DOWN")}
+
 
 
     }
